# rwb_qt

./: .gitignore  README.md  async_tool_use_stream (1).py  async_tool_use_stream.py  audio_recorder.py  calculate_weekday.py  date_calculator.py  main.py  package_mac.sh  package_mac_pyinstaller.sh  pyproject.toml  requirements.txt  rwb.spec  setup.py  test.py  today_date.py  weekday_calculator.py
docs/developers/: API_REFERENCE.md  ARCHITECTURE.md  QUICKSTART.md  README.md
docs/usermanual/: FEATURES.md  GETTING_STARTED.md  README.md  SETTINGS.md  TROUBLESHOOTING.md
experimental/: 02_agent_with_tools.py  agno_documentation.txt  async_tool_use_stream.py  camel.py  data.db  image_agent.py  kokoro_test.py  pywebrtc_vad.py  recipes.py  researchagent.py
rwb/: __init__.py  __main__.py  context.py
rwb/agents/: QHorstDorrigo_performance.json  __init__.py  agentmodelmatcher.py  all_working_models_qa_performance.json  model_performance.json  rwbagent.py  worker.py
rwb/audio/: __init__.py  assistant.py  chat_history.py  chat_message.py  direct_record_vad.py  memory_vad.py  processor.py  pyvoicedetector.py  recorder.py  rwbagent.py  stt.py  test_stt_model.py  test_stt_with_file.py  testvad.py  tts copy.py  tts.py  voice_detector.py
rwb/audio/ui/: __init__.py  components.py  history_demo.py  history_list.py  settings_dialog.py  styles.py
rwb/helpers/: texts.py  textsanitizer.py
rwb/llm/: ollamamodels.py
rwb/qt/: __init__.py  plugin_manager.py
rwb/tools/: pubmed.py  pubmed_tools.py
